--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/lodash": "^4.14.168",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
       "@types/dotenv": "^8.2.0",
+      "bcrypt": "^5.0.1",
       "body-parser": "^1.18.1",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
+      "lodash": "^4.17.21",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.31"
