--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "@types/jest": "^26.0.20",
       "@types/lodash": "^4.14.168",
       "@types/node": "^8.0.29",
+      "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "4",
       "eslint": "7",
       "eslint-config-standard-with-typescript": "^20.0.0",
@@ -15,8 +16,10 @@
       "eslint-plugin-promise": "4",
       "jest": "^26.6.3",
       "nodemon": "^2.0.7",
+      "supertest": "^6.1.3",
       "ts-jest": "^26.5.3",
       "ts-node": "3.3.0",
+      "typeorm-transactional-tests": "^1.1.5",
       "typescript": "^4.2.3"
    },
    "dependencies": {
