--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
+      "rootDir": "./",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
