--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/node": "^8.0.29",
       "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "4",
+      "chance": "^1.1.7",
       "eslint": "7",
       "eslint-config-standard-with-typescript": "^20.0.0",
       "eslint-plugin-import": "2",
