--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,21 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
+      "outDir": "build",
       "module": "commonjs",
+      "target": "es2019",
+      "esModuleInterop": true,
+      "sourceMap": true,
+      "rootDirs": ["src", "tests"],
+      "baseUrl": "src",
+      "paths": {
+         "~/tests/*": ["../tests/*"],
+         "~/*": ["*"]
+      },
       "moduleResolution": "node",
-      "outDir": "./build",
-      "rootDir": "./",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true,
-      "esModuleInterop": true,
       "strictNullChecks": true
-   }
+   },
+   "include": ["src", "tests"],
+   "exclude": []
 }
