--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
    },
    "scripts": {
       "start": "nodemon",
-      "test": "jest --verbose --watchAll"
+      "test": "jest --verbose --watchAll --runInBand"
    },
    "main": "index.js",
    "author": "Henrique Curzio Ladeira <henrique.c.ladeira@gmail.com>",
