--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
    "compilerOptions": {
+      "lib": ["es6"],
+      "types": ["node"],
       "outDir": "build",
       "module": "commonjs",
-      "target": "es2019",
+      "target": "es6",
       "esModuleInterop": true,
       "sourceMap": true,
       "rootDirs": ["src", "tests"],
