--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "typeorm": "0.2.31"
    },
    "scripts": {
-      "start": "node build/src/index.js",
+      "start": "node dist/index.js",
       "build": "tsc",
       "postinstall": "npm run build",
       "dev": "nodemon",
