--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "esModuleInterop": true,
       "sourceMap": true,
       "rootDirs": ["src", "tests"],
-      "baseUrl": "src",
+      "baseUrl": "./src",
       "paths": {
          "~/tests/*": ["../tests/*"],
          "~/*": ["*"]
