--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
    },
    "devDependencies": {
       "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.11",
       "@types/jest": "^26.0.20",
+      "@types/jsonwebtoken": "^8.5.1",
       "@types/lodash": "^4.14.168",
       "@types/node": "^8.0.29",
       "@types/supertest": "^2.0.10",
@@ -42,7 +44,6 @@
    "scripts": {
       "start": "node dist/index.js",
       "build": "tsc",
-      "postinstall": "npm run build",
       "dev": "nodemon",
       "test": "jest --verbose --watchAll --runInBand"
    },
