--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "typeorm": "0.2.31"
    },
    "scripts": {
+      "docker:build": "docker-compose build",
+      "docker:up": "docker-compose up -d",
       "start": "node dist/index.js",
       "build": "tsc",
       "dev": "nodemon",
