feat: add lib uuid

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "pg": "^8.4.0",
       "pg-connection-string": "^2.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.31"
+      "typeorm": "0.2.31",
+      "uuid": "^8.3.2"
    },
    "scripts": {
       "docker:build": "docker-compose build",
