--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "bcrypt": "^5.0.1",
       "body-parser": "^1.18.1",
       "dotenv": "^8.2.0",
+      "dotenv-safe": "^8.2.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.21",
