--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
       "pg": "^8.4.0",
       "pg-connection-string": "^2.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.31",
-      "uuid": "^8.3.2"
+      "typeorm": "0.2.31"
    },
    "scripts": {
       "docker:build": "docker-compose build",
