--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       "chance": "^1.1.7",
       "eslint": "7",
       "eslint-config-standard-with-typescript": "^20.0.0",
+      "eslint-config-prettier": "^8.3.0",
+      "eslint-plugin-prettier": "^3.4.0",
+      "prettier": "^2.2.1",
       "eslint-plugin-import": "2",
       "eslint-plugin-node": "11",
       "eslint-plugin-promise": "4",
@@ -48,7 +51,8 @@
       "start": "node dist/index.js",
       "build": "tsc",
       "dev": "nodemon",
-      "test": "jest --verbose --watchAll --runInBand"
+      "test": "jest --verbose --watchAll --runInBand",
+      "prettify": "prettier --config .prettierrc 'src/**/*.ts' --write"
    },
    "main": "index.js",
    "author": "Henrique Curzio Ladeira <henrique.c.ladeira@gmail.com>",
